<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="405dp">

                <ImageView
                    android:id="@+id/imgBackdrop"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    tools:background="@drawable/gradient_main"
                    android:contentDescription="@string/image_backdrop" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:alpha="0.5"
                    android:background="@color/black"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/image_backdrop_cover" />

                <LinearLayout
                    android:id="@+id/layoutBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgPoster"
                        android:layout_width="200dp"
                        android:layout_height="300dp"
                        android:layout_marginTop="20dp"
                        android:elevation="16dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/roundedCornersImageView"
                        app:srcCompat="@drawable/app_icon_bg" />

                    <TextView
                        android:id="@+id/tvDetailTitle"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:paddingBottom="16dp"
                        tools:text="Fantastic Beasts: The Crimes of Grindelwald (2017)"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textFontWeight="600"
                        android:layout_marginTop="15dp"
                        tools:targetApi="p" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp">

                <TextView
                    android:id="@+id/tvDetailUserScores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:background="@drawable/bg_circle"
                    tools:text="80 %"
                    android:textColor="@color/white"
                    android:textFontWeight="700"
                    android:textSize="16sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    tools:targetApi="p"
                    tools:ignore="RelativeOverlap" />

                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/tvLabelReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            android:text="@string/release_date"
                            android:textFontWeight="700"
                            android:textColor="@color/brown"
                            android:textStyle="bold"
                            tools:targetApi="p" />

                        <TextView
                            android:id="@+id/tvReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="12dp"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            tools:text="10/05/2017"
                            android:textFontWeight="500"
                            tools:targetApi="p" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:id="@+id/tvLabelOverview"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:gravity="center_vertical"
                            android:text="@string/overview"
                            android:textFontWeight="700"
                            android:textColor="@color/brown"
                            android:textStyle="bold"
                            tools:targetApi="p" />

                        <TextView
                            android:id="@+id/tvOverview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="12dp"
                            android:textSize="16sp"
                            android:justificationMode="inter_word"
                            tools:text="Lorem ipsummmmmmmmmm mmmmmmm mmmmmmm mmmmm mmmm \nhalooo"
                            android:textFontWeight="500"
                            tools:targetApi="p" />
                    </LinearLayout>
                </LinearLayout>




            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="22dp"
                android:paddingVertical="12dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iconShare"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_share_circle"
                    android:contentDescription="@string/icon_share" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_like_1_outline"
        app:backgroundTint="@color/red"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        android:contentDescription="@string/favorite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>