...
    <string name="tab_movies">Movies</string>
    <string name="tab_tv_shows">TV Shows</string>
    <string name="icon_back" tools:keep="@string/icon_back">icon back</string>
    <string name="icon_share">icon share</string>
    <string name="release_date">Release date :</string>
    <string name="overview">Overview :</string>
    <string name="search">Search</string>
    <string name="image_backdrop">image backdrop</string>
    <string name="image_backdrop_cover">image backdrop cover</string>
    <string name="image_search">image search</string>
</resources>
